added large model file and prediction notebook

--- a/yolov1_training.ipynb
+++ b/yolov1_training.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Open in Google Colab](https://colab.research.google.com/github/Jechen00/yolov1-pytorch/blob/main/yolov1_training.ipynb)"
+    "# [Open in Google Colab](https://colab.research.google.com/github/Jechen00/yolov1-pytorch/blob/main/yolov1_training.ipynb)\n",
+    "\n",
+    "## Note: This was trained on an A100 GPU"
    ]
   },
   {
